--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Work Order System</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>Work Orders</h1>
-    <a href="/add">Add New Work Order</a>
-    <table border="1">
+<body class="container mt-4">
+    <h1 class="text-center">Work Orders</h1>
+    <a href="/add" class="btn btn-primary mb-3">Add New Work Order</a>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>ID</th>
@@ -24,8 +25,8 @@
                 <td>{{ work_order.status }}</td>
                 <td>{{ work_order.date_created }}</td>
                 <td>
-                    <form action="/delete/{{ work_order.id }}" method="POST" style="display:inline;" onsubmit="return confirm('Are you sure you want to delete this work order?');">
-                        <button type="submit">Delete</button>
+                    <form action="/delete/{{ work_order.id }}" method="POST" style="display:inline;">
+                        <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                     </form>
                 </td>
             </tr>
