--- a/add.html
+++ b/add.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <title>Add New Work Order</title>
+    <!-- Include Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <h1>Add New Work Order</h1>
-    <form action="/add" method="POST">
-        <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required>
-        <button type="submit">Add Work Order</button>
+<body class="container mt-4">
+    <h1 class="text-center">Add New Work Order</h1>
+
+    <form action="/add" method="POST" class="mt-4">
+        <div class="mb-3">
+            <label for="description" class="form-label">Work Order Description</label>
+            <input type="text" id="description" name="description" class="form-control" placeholder="Enter the details of the work order" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Add Work Order</button>
+        <a href="/" class="btn btn-secondary">Cancel</a>
     </form>
 </body>
 </html>
